[package]
name = "fn"
authors = ["FindoraNetwork"]
version = "0.1.0"
edition = "2021"
description = "Findora Network command line tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfn = { path = "../libfn" }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
lazy_static = "1.4"
console = "0.15"

# need to discuss are below two dependencies needed for transfer command
libfindora = { path = "../libfindora" }
zei = { git = "https://github.com/tiannian/zei.git", branch = "feat-refactor-address-v1" }
