[package]
name = "fn"
authors = ["FindoraNetwork"]
version = "0.1.0"
edition = "2021"
description = "Findora Network command line tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfn = { path = "../libfn" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git", features = ["http"] }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
lazy_static = "1.4"
console = "0.15"
rand_chacha = "0.2" 
futures = "0.3"
regex = { version = "1.5", default-features = false, features = ["std"] }
primitive-types = { version = "0.10.1", features = ["serde_no_std"] }
tokio = { version = "1", features = ["full"] }
tm-abci = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
libfindora = { path = "../libfindora" }
async-trait = "0.1.51"
env_logger = "0.9.0"