[package]
name = "findorad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-node = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git" }
bs3 = { git = "https://github.com/FindoraNetwork/bs3.git", features = ["sled-backend"], tag = "0.1.9" }
env_logger = "0.9.0"
async-trait = "0.1.51"
sha3 = "0.9.1"
digest = "0.9.0"
serde_json = "1.0.68"
serde = "1.0.130"
libfindora = { path = "../libfindora" }
zei = { git = "https://github.com/tiannian/zei.git", branch = "feat-refactor-address-v1" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.2"
log = "0.4.14"
tendermint-sys = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }
tm-abci = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }

primitive-types = { version = "0.10.1", features = ["serde_no_std"] }

clap = "3.0"

fm-utxo = { path = "../modules/utxo" }
fm-coinbase = { path = "../modules/coinbase" }
fm-staking = { path = "../modules/staking" }
fm-fee = { path = "../modules/fee" }
fm-asset = { path = "../modules/asset" }

libfn = { path = "../libfn" }

tokio = { version = "1", features = ["full"] }

[dev-dependencies]
ruc = "1.0.2"
sled = "0.34"
