[package]
name = "findorad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-node = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git" }
bs3 = { git = "https://github.com/FindoraNetwork/bs3.git", features = ["sled-backend"], tag = "0.1.13" }
tendermint-sys = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }

sled = "0.34"

log = "0.4.14"
env_logger = "0.9.0"
async-trait = "0.1.51"

digest = "0.9.0"
sha3 = "0.9.1"

serde = "1.0.130"
serde_json = "1.0.68"

libfindora = { path = "../libfindora" }
zei = { git = "https://github.com/tiannian/zei.git", branch = "feat-refactor-address-v1" }

rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.2"

tm-abci = { git = "https://github.com/FindoraNetwork/tendermint-sys.git" }

primitive-types = { version = "0.10.1", features = ["serde_no_std"] }

clap = { version = "3.0.0", features = ["derive"] }

fm-utxo = { path = "../modules/utxo" }
fm-coinbase = { path = "../modules/coinbase" }
fm-staking = { path = "../modules/staking" }
fm-fee = { path = "../modules/fee" }
fm-asset = { path = "../modules/asset" }
fm-evm = { path = "../modules/evm" }

libfn = { path = "../libfn" }

web3-server = { path = "../web3", optional = true }

tokio = { version = "1", features = ["full"] }

[features]
web3-http = ["web3-server/http"]
web3-ws = ["web3-server/ws"]

default = ["web3-http"]

[dev-dependencies]
ruc = "1.0.2"
sled = "0.34"

