[package]
name = "finutils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", branch = "feat-refactor" }
libfindora = { path = "../libfindora" }
findorad = { path = "../findorad" }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
abcf-sdk = { git = "ssh://git@github.com/FindoraNetwork/abcf" }
base64 = "0.10"
sha3 = "0.9.1"
hex-literal = "0.3.1"
attohttpc = { version = "0.16.3", default-features = false, features = ["compress", "json", "tls-rustls"] }

[[bin]]
name = "command_line"
path = "src/bins/command_line/command_line.rs"