[package]
name = "libfindora"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zei = { git = "ssh://git@github.com/FindoraNetwork/zei", branch = "feat-refactor" }
abcf = { git = "ssh://git@github.com/FindoraNetwork/abcf", branch = "feat-add-utxo" }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
digest = "0.9"
sha3 = "0.9"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
