[package]
name = "libfindora"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zei = { git = "ssh://git@github.com/tiannian/zei", branch = "feat-refactor" }
ed25519-dalek = "1"
curve25519-dalek = { version =  "3" }
abcf = { git = "ssh://git@github.com/FindoraNetwork/abcf" , branch = "modify-rpc-macro"}
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
digest = "0.9"
sha3 = "0.9"
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
capnp = "0.14"
bulletproofs = { package = "bulletproofs", git = "ssh://git@github.com/FindoraNetwork/bulletproofs", branch = "batch_verification", features = ["yoloproofs"] }
log = "0.4.14"
hex = "0.4.3"

[build-dependencies]
capnpc = "0.14"
