[package]
name = "libfn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruc = { git = "https://github.com/FindoraNetwork/RUC.git", branch = "master" }
libfindora = { path = "../libfindora" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git", default-features = false }
serde = "1.0.130"
log = "0.4.14"
zei = { git = "https://github.com/tiannian/zei.git", branch = "feat-refactor" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.2"
fm-utxo = { path = "../modules/utxo" }
ed25519-dalek-bip32 = { git = "https://github.com/FindoraNetwork/ed25519-dalek-bip32", branch = "feat-allow-nohardened" }
bip0039 = "0.8.0"
bech32 = "0.8.1"
base64 = "0.10"
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
