[package]
name = "web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = { version = "18.0", optional = true }
jsonrpc-ws-server = { version = "18.0", optional = true }

primitive-types = { version = "0.10.1", features = ["serde_no_std"] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
http = ["jsonrpc-http-server"]
ws = ["jsonrpc-ws-server"]

