[package]
name = "fm-asset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-node = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git" }
async-trait = "0.1.51"
libfindora = { path = "../../libfindora" }
log = "0.4.14"
serde_json = "1.0.68"
primitive-types = { version = "0.10.1", features = ["serde_no_std"] }
