[package]
name = "fm-rewards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-node = { git = "https://github.com/FindoraNetwork/abcf.git" }
abcf-sdk = { git = "https://github.com/FindoraNetwork/abcf.git" }

async-trait = "0.1.51"
log = "0.4.14"

zei = { git = "https://github.com/tiannian/zei.git", branch = "feat-refactor-address-v1" }

rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.2"

serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = "1.0.68"

libfindora = { path = "../../libfindora" }

wasmi = "0.11.0"

primitive-types = { version = "0.10.1", features = ["serde_no_std"] }
