[package]
name = "fm-staking"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abcf = { git = "ssh://git@github.com/FindoraNetwork/abcf" }
abcf-node = { git = "ssh://git@github.com/FindoraNetwork/abcf" }
abcf-sdk = { git = "ssh://git@github.com/FindoraNetwork/abcf" }
async-trait = "0.1.51"
libfindora = { path = "../../libfindora" }
zei = { git = "ssh://git@github.com/tiannian/zei", branch = "feat-refactor" }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
rand_chacha = "0.2.2"
log = "0.4.14"
serde_json = "1.0.68"
fm-utxo = { path = "../utxo" }
